# moneycpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
include/: country.h  country_currency.h  currency.h  money.h  rounding.h
include/ext/: boost.h
test/: CMakeLists.txt  main.cpp  test_boost.cpp  test_country.cpp  test_country_currency.cpp  test_currency.cpp  test_money.cpp  test_rounding.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
